WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272960
OffscreenCanvas.transferToImageBuffer() does not clear WebGL drawing buffer correctly
https://bugs.webkit.org/show_bug.cgi?id=272960
Summary
OffscreenCanvas.transferToImageBuffer() does not clear WebGL drawing buffer c...
Kimmo Kinnunen
Reported
2024-04-19 00:45:28 PDT
OffscreenCanvas.transferToImageBuffer() does not clear WebGL drawing buffer correctly
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-19 00:46:14 PDT
<
rdar://problem/126738038
>
Kimmo Kinnunen
Comment 2
2024-04-19 00:55:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27501
EWS
Comment 3
2024-05-29 01:39:12 PDT
Committed
279434@main
(c3988b98d7c4): <
https://commits.webkit.org/279434@main
> Reviewed commits have been landed. Closing PR #27501 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug