OffscreenCanvas.transferToImageBuffer() does not clear WebGL drawing buffer correctly https://bugs.webkit.org/show_bug.cgi?id=272960 rdar://126738038

Reviewed by NOBODY (OOPS!).

FIXME: Will be landed once https://github.com/KhronosGroup/WebGL/pull/3643
lands. Then the commit will enable the test.

OffscreenCanvas.transferToImageBuffer() should cause compositing steps
similar to the case of preserveDrawingBuffer=false drawing buffer is
displayed:
 - color buffer, depth, stencil is cleared

Previous clear implementation would use WebGL context state, which
would not necceassarily clear the correct framebuffer in a correct
way.

* Source/WebCore/html/OffscreenCanvas.cpp:
(WebCore::OffscreenCanvas::transferToImageBitmap):
* Source/WebCore/html/canvas/WebGLDefaultFramebuffer.cpp:
(WebCore::WebGLDefaultFramebuffer::markAllBuffersDirty):
* Source/WebCore/html/canvas/WebGLDefaultFramebuffer.h:
* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::markBuffersDirtyForTransfer):
* Source/WebCore/html/canvas/WebGLRenderingContextBase.h: