Source/WebCore/html/canvas/WebGLRenderingContextBase.h
@@ -436,6 +436,7 @@ public:
 #if ENABLE(MEDIA_STREAM) || ENABLE(WEB_CODECS)
     RefPtr<VideoFrame> surfaceBufferToVideoFrame(SurfaceBuffer);
 #endif
+    void markDrawingBuffersDirtyAfterTransfer();
 
     void removeSharedObject(WebGLObject&);
     void removeContextObject(WebGLObject&);
@@ -477,6 +478,9 @@ public:
     const PixelStoreParameters& unpackPixelStoreParameters() const { return m_unpackParameters; };
 
     WeakPtr<WebGLRenderingContextBase> createRefForContextObject();
+
+    bool compositingResultsNeedUpdating() const final { return m_compositingResultsNeedUpdating; }
+    void prepareForDisplay() final;
 protected:
     WebGLRenderingContextBase(CanvasBase&, WebGLContextAttributes&&);
 
@@ -582,10 +586,7 @@ protected:
     void loseExtensions(LostContextMode);
 
     virtual void uncacheDeletedBuffer(const AbstractLocker&, WebGLBuffer*);
-
-    bool compositingResultsNeedUpdating() const final { return m_compositingResultsNeedUpdating; }
     bool needsPreparationForDisplay() const final { return true; }
-    void prepareForDisplay() final;
     void updateActiveOrdinal();
 
     struct ContextLostState {
